fix spacing for social media icons, remove margin below name

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,11 +5,11 @@
 h1 {
   margin-bottom: 0px;
   font-size: 36px;
-  margin-top: 60px;
+  margin-top: 50px;
 }
 
 .location {
-  margin-top: 10px;
+  margin-top: 0px;
   margin-bottom: 0px;
 }
 
@@ -33,4 +33,8 @@ h1 {
 
 .github-logo {
   color: #171515;
+}
+
+.social-media {
+  margin-top: 0px;
 }
